# wasm-bar-code-example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  package.json  untitled 2.txt
c/: image-processor.c
include/: config.h
wasm/: image-processor.js  image-processor.wasm  image-processor.wast
zbar/: libzbar.la  zbar_libzbar_la-config.lo  zbar_libzbar_la-convert.lo  zbar_libzbar_la-decoder.lo  zbar_libzbar_la-error.lo  zbar_libzbar_la-image.lo  zbar_libzbar_la-img_scanner.lo  zbar_libzbar_la-processor.lo  zbar_libzbar_la-refcnt.lo  zbar_libzbar_la-scanner.lo  zbar_libzbar_la-symbol.lo  zbar_libzbar_la-video.lo  zbar_libzbar_la-window.lo
zbar/.deps/: zbar_libzbar_la-config.Plo  zbar_libzbar_la-convert.Plo  zbar_libzbar_la-decoder.Plo  zbar_libzbar_la-error.Plo  zbar_libzbar_la-image.Plo  zbar_libzbar_la-img_scanner.Plo  zbar_libzbar_la-processor.Plo  zbar_libzbar_la-refcnt.Plo  zbar_libzbar_la-scanner.Plo  zbar_libzbar_la-symbol.Plo  zbar_libzbar_la-video.Plo  zbar_libzbar_la-window.Plo
zbar/.libs/: libzbar.lai
zbar/decoder/: zbar_libzbar_la-code128.lo  zbar_libzbar_la-code39.lo  zbar_libzbar_la-ean.lo  zbar_libzbar_la-i25.lo  zbar_libzbar_la-qr_finder.lo
zbar/decoder/.deps/: zbar_libzbar_la-code128.Plo  zbar_libzbar_la-code39.Plo  zbar_libzbar_la-ean.Plo  zbar_libzbar_la-i25.Plo  zbar_libzbar_la-qr_finder.Plo
zbar/processor/: zbar_libzbar_la-lock.lo  zbar_libzbar_la-null.lo  zbar_libzbar_la-posix.lo
zbar/processor/.deps/: zbar_libzbar_la-lock.Plo  zbar_libzbar_la-null.Plo  (+1 more)
zbar/qrcode/: zbar_libzbar_la-bch15_5.lo  zbar_libzbar_la-binarize.lo  zbar_libzbar_la-isaac.lo  zbar_libzbar_la-qrdec.lo  zbar_libzbar_la-qrdectxt.lo  zbar_libzbar_la-rs.lo  zbar_libzbar_la-util.lo
zbar/video/: zbar_libzbar_la-null.lo
zbar/window/: zbar_libzbar_la-null.lo
(+8 files in other folders)
